configuration/rhoai/hub-cluster/qwen25-7b-instruct.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redhataiqwen25-7b-instruct-kserve-route
  namespace: test-maas
  labels:
    app.kubernetes.io/component: llminferenceservice-router
    app.kubernetes.io/name: redhataiqwen25-7b-instruct
    app.kubernetes.io/part-of: llminferenceservice
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: maas-default-gateway
      namespace: openshift-ingress
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: redhataiqwen25-7b-instruct-kserve-workload-svc
          port: 8000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /v1/completions
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /test-maas/redhataiqwen25-7b-instruct/v1/completions
      timeouts:
        backendRequest: 0s
        request: 0s
    - backendRefs:
        - group: ''
          kind: Service
          name: redhataiqwen25-7b-instruct-kserve-workload-svc
          port: 8000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /v1/chat/completions
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /test-maas/redhataiqwen25-7b-instruct/v1/chat/completions
      timeouts:
        backendRequest: 0s
        request: 0s
    - backendRefs:
        - group: ''
          kind: Service
          name: redhataiqwen25-7b-instruct-kserve-workload-svc
          port: 8000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /v1/responses
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /test-maas/redhataiqwen25-7b-instruct/v1/responses
      timeouts:
        backendRequest: 0s
        request: 0s
    - backendRefs:
        - group: ''
          kind: Service
          name: redhataiqwen25-7b-instruct-kserve-workload-svc
          port: 8000
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /test-maas/redhataiqwen25-7b-instruct
      timeouts:
        backendRequest: 0s
        request: 0s
