configuration/rhoai/hub-cluster/rhoai-monitoring-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ds-prometheus-thanos-ingress
  namespace: redhat-ods-monitoring
  labels:
    platform.opendatahub.io/part-of: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: data-science-monitoringstack
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: ThanosQuerier
              app.kubernetes.io/managed-by: observability-operator
      ports:
        - protocol: TCP
          port: 10901
